<resources>
    <string name="app_name">Pick up</string>
    <string name="General_name">Learn English Word</string>
    <string name="General_btn_1">Учить слова</string>
    <string name="General_btn_2">Добавить слово или создать словарь</string>
    <string name="General_btn_3">Посмотреть словари</string>
    <string name="General_btn_4">Выйти</string>
    <string name="edtSlovar_dobav_slovar">Добавить новый словарь</string>
    <string name="edtSlovar_redact_slovar">Добавить слова в словарь</string>
    <string name="name_slovari">Введите имя словаря</string>
    <string name="tip_slovari">Введите тип словаря</string>
    <string name="MakeSlovarAGo">Создать словарь и перейти к нему</string>
    <string name="MakeSlovarANotGo">Создать словарь и вернуться в меню</string>
    <string name="Standart_Slovo">Пусто</string>
    <string name="vib">Выбрать</string>
    <string name="del">удалить</string>
    <string name="del_word">удалить слово</string>
    <string name="dob_word">добавить слово</string>
    <string name="word">Введите слово</string>
    <string name="pick_up">   Pick Up  </string>
    <string name="lernwords"> Учить слова </string>
    <string name="slovary"> Словари </string>
    <string name="vihod"> Выход </string>
    <string name="slovarglag"> Словарь: глаголы </string>
    <string name="kolvo"> Кол-во слов: 36 </string>
    <string name="nazad"> Назад </string>
    <string name="timer"> 15 </string>
    <string name="zagolovok"> Глаголы </string>
    <string name="podskazka"> Ид </string>
    <string name="perevod"> Перевод: </string>
    <string name="sledsl"> Следующее слово </string>
    <string name="stop"> СТОП </string>
    <string name="dobavlen"> Добавление </string>
    <string name="vvodslo"> Введите название словаря: </string>
    <string name="nazvslov"> Глаголы </string>
    <string name="perevodsl"> Go </string>
    <string name="sohr"> Сохранить </string>
    <string name="sligr1"> Какать </string>
    <string name="sligr2"> Драться </string>
    <string name="sligr3"> Резать </string>
    <string name="sligr4"> Идти </string>
    <string name="sligr5"> Спать </string>
    <string name="nachat"> Начать </string>
    <string name="legko"> Легко </string>
    <string name="redact"> Редактирование </string>
    <string name="slovar"> Словарь: </string>
    <string name="nazvslovora"> Глаголы </string>
    <string name="slovdob"> Идти </string>
    <string name="slovyb"> Гулять </string>
    <string name="dobavit"> Добавить </string>
    <string name="ydalit"> Удалить </string>
    <string name="perevodsam"> Ввести перевод самому </string>
    <string name="slvslo"> Слова в словаре: </string>
    <string name="save"> Удалить словарь </string>
    <string name="perevodchik"> Использовать переводчик </string>
    <string name="slovaru"> Словари </string>
    <string name="grust"> У вас сейчас нет словарей, но вы можете их создать </string>
    <string name="dobavitslovar"> Добавить словарь </string>
    <string name="proiti"> Вы прошли все слова </string>
    <string name="vmeny"> В меню </string>
    <string name="zanovo"> Заново </string>
</resources>