<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:textSize="25pt"
            android:textColor="@color/black"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:id="@+id/pick_up"
            android:layout_width="250dp"
            android:layout_height="67dp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center_horizontal|top"
            android:lineHeight="57sp"
            android:text="@string/pick_up"

            />

        <androidx.appcompat.widget.AppCompatButton
            android:textAppearance="@style/dobavit"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/white"
            android:layout_marginTop="150dp"
            android:layout_gravity="center"
            android:id="@+id/play"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:text="@string/lernwords"
            android:lineHeight="53sp"
            android:background="@drawable/some_id1"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:textAppearance="@style/dobavit"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/slovar_redakt"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:text="@string/slovary"
            android:lineHeight="53sp"
            android:background="@drawable/some_id1" />
        <androidx.appcompat.widget.AppCompatButton
            android:visibility="gone"
            android:textAppearance="@style/dobavit"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/dobav"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:text="Доб"
            android:lineHeight="53sp"
            android:background="@drawable/some_id1" />
        <androidx.appcompat.widget.AppCompatButton
            android:textAppearance="@style/dobavit"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/reg"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:text="Регистрация/авторизация"
            android:lineHeight="53sp"
            android:background="@drawable/some_id1" />
        <androidx.appcompat.widget.AppCompatButton
            android:textAppearance="@style/dobavit"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/profil"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:text="Ваш аккаунт"
            android:lineHeight="53sp"
            android:background="@drawable/some_id1" />

        <androidx.appcompat.widget.AppCompatButton
            android:textAppearance="@style/dobavit"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/exit"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:text="@string/vihod"
            android:textStyle=""
            android:background="@drawable/some_id1"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>