<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tema"

    tools:context=".MainActivity61">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/NAMESLOVAR"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu"
            android:gravity="top"
            android:lineHeight="29sp"
            android:textAppearance="@style/slovargigr" />
        <TextView
            android:textColor="@color/black"
            android:id="@+id/timer"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:lineHeight="48sp"
            android:textAppearance="@style/timer"
             />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            />
        </LinearLayout>
        <TextView

            android:id="@+id/txy22"
            android:layout_width="140dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/black"
            android:gravity="center_horizontal|top"
            android:lineHeight="29sp"
            android:textAppearance="@style/zagolov"
             />
        <View
            android:layout_width="140dp"
            android:layout_height="3dp"
            android:background="@drawable/polosa"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"
             />
        <TextView
            android:id="@+id/podskaska"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/black"
            android:lineHeight="40sp"
            android:layout_marginTop="30dp"
            android:textAppearance="@style/some_id"
            />
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="40dp"
                android:fontFamily="@font/ubuntu"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:lineHeight="40sp"
                android:text="@string/perevod"
                android:textAppearance="@style/some_id"
                />
        <EditText
            android:textAppearance="@style/some_id"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:id="@+id/edtGL"
            android:layout_marginLeft="30dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:id="@+id/start23"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:layout_width="275dp"
            android:layout_height="55dp"
            android:background="@drawable/sledslovo"
            android:text="@string/sledsl"
             />
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/stop"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:background="@drawable/stop"
            android:text="@string/stop"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>